# CC_V2

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
CC_V2/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
app_contacts/: forms.py  views.py
app_contacts/templates/app_contacts/: add_contact.html  calendar.html  contact_birthday.html  contact_details.html  contact_update.html  contacts.html
app_files/: forms.py  models.py  urls.py  views.py
app_files/templates/app_files/: archives.html  audio_files.html  docs_files.html  edit_files.html  files_page.html  image_files.html  other_files.html  upload_files.html  video_files.html
app_main/: forms.py  models.py  urls.py  views.py
app_main/templates/app_main/: base.html  contact_us_letter.html  delete_personal_data.html  index.html  privacy_policy.html  success.html  terms_of_use.html
app_news/: urls.py  views.py
app_news/templates/app_news/: business_news.html  entertainment_news.html  health_news.html  news_main.html  science_news.html  sports_news.html  tech_news.html
staticfiles/: staticfiles.json
staticfiles/app_contacts/css/: calendar_table.css  check_box.css  contact.b206747514aa.css
staticfiles/app_main/js/: main.js  swiper-bundle.min.ebf8500a1390.js  wow_min.1c3620bcd26d.js
templates/errors/: 400.html  403.html  404.html  500.html
templates/socialaccount/: login.html
users/: forms.py  urls.py  validators.py  views.py
users/templates/users/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  signin.html  (+3 more)
(+2 files in other folders)
